# oicnp

./: .editorconfig  .env.example  .gitignore  Cargo.toml  README.md  create_departments_table.rs  diesel.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  system_idens.rs  turbo.json
api/: .env  .env.example  Cargo.toml  app.yml  app.yml.example
api/migrations/2021-08-09-133437_create_users/: up.sql
api/migrations/2021-12-07-114953_init_user/: down.sql
api/src/: lib.rs  run.rs  schema.rs
api/src/constants/: global_config.rs
api/src/dbs/: mod.rs  star_wars.rs
api/src/gql/: mod.rs  mutations.rs  queries.rs  user_query.rs
api/src/models/: character.rs  file.rs  mod.rs  nodes.rs  taxonomies.rs  users.rs
api/src/services/: mod.rs  user.rs
api/src/typings/: common.rs  state.rs
api/src/utils/: global_config.rs
crates/oic-admin/: Cargo.toml
crates/oic-admin/src/: app.rs  consts.rs  context.rs  lib.rs
crates/oic-admin/templates/: base.html  home.html
crates/oic-api/: Cargo.toml
crates/oic-api/src/: lib.rs
crates/oic-cache/: Cargo.toml  readme.md
crates/oic-cache/examples/: axum_ext.rs  axum_integration.rs  basic.rs  loco_compat.rs  namespace.rs  persistence.rs  swr.rs  vary.rs
crates/oic-cache/proto/: cache.proto
crates/oic-cache/src/: app.rs  cache.rs  config.rs  error.rs  ext.rs  fetch.rs  lib.rs  metadata.rs  stats.rs  utils.rs  vary.rs
crates/oic-cache/tests/: README.md  concurrent_test.rs  integration_test.rs  server_integration_test.rs
crates/oic-cmd/: Cargo.toml
crates/oic-cmd/seeds/: notes.yaml
crates/oic-cmd/src/: cli.rs  constants.rs  init.rs  lib.rs  utils.rs
crates/oic-core/: Cargo.toml
crates/oic-core/src/: app.rs  lib.rs  prelude.rs
crates/oic-derives/: Cargo.toml
crates/oic-derives/src/: attributes.rs  column.rs  lib.rs  list_filter.rs  utils.rs
crates/oic-web/: Cargo.toml  MIGRATION.md  readme.md
crates/oic-web/docs/: cache-bytes-optimization.md
crates/oic-web/src/: app.rs  consts.rs  context.rs  lib.rs
crates/oic-web/templates/: about.html  base.html  blog_detail.html  blog_list.html  contact.html  error.html  home.html  index.html  layout.html  layout_homepage.html  link.html
frontend/: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  input.css  package.json  tailwind.config.js
frontend/public/: tailwind.css
frontend/src/: app.rs  lib.rs  route.rs
frontend/src/components/: mod.rs
frontend/src/constants/: common.rs
frontend/src/pages/: mod.rs
frontend/src/styles/: index.scss
frontend/src/types/: common.rs  mod.rs  widgets.rs
frontend/src/utils/: common.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220825_211845_create_departments_table.rs  m20220825_211904_create_api_db_table.rs  m20220825_211916_create_attributes_table.rs  m20220825_211920_create_attribute_values_table.rs  m20220825_211935_create_crons_table.rs  m20220825_211957_create_crons_logs_table.rs  m20220825_212010_create_login_logs_table.rs  m20220825_212018_create_menus_table.rs  m20220825_212020_create_menu_permissions_map_table.rs  m20220825_212030_create_operation_logs_table.rs  m20220825_212131_create_positions_table.rs  m20220825_212141_create_roles_table.rs  m20220825_212142_create_permissions_table.rs  m20220825_212152_create_role_api_map_table.rs  m20220825_212152_create_role_permissions_map_table.rs  m20220825_212215_create_role_department_map_table.rs  m20220825_212228_create_update_logs_table.rs  m20220825_212238_create_users_table.rs  m20220825_212250_create_user_department_map_table.rs  m20220825_212300_create_user_position_map_table.rs  m20220825_212309_create_user_role_map_table.rs  m20220825_212320_create_user_online_table.rs  m20230116_090508_create_cms_files_table.rs  m20230116_092354_create_cms_user_files_map_table.rs  m20230116_092428_create_cms_categories_table.rs  m20230116_092428_create_cms_taxonomies_table.rs  m20230116_092604_create_cms_tags_table.rs  m20230116_092654_create_cms_comments_table.rs  m20230116_092714_create_cms_comment_body_table.rs  m20230116_092740_create_cms_nodes_table.rs  m20230116_092759_create_cms_node_body_table.rs  m20230116_092826_create_cms_node_categories_map_table.rs  m20230116_092826_create_cms_node_taxonomies_map_table.rs  m20230116_092906_create_cms_node_tags_map_table.rs  m20230116_092919_create_cms_node_files_map_table.rs  m20230116_092931_create_cms_node_comments_map_table.rs  m20230116_092944_create_cms_configs_table.rs  m20230607_204902_create_short_links_table.rs  m20241011_131809_crate_notes_table.rs  (+3 more)
migration/src/types/: cms_idens.rs  mod.rs  system_idens.rs
migration/src/utils/: comment.rs
oicnp-api/: Cargo.toml  README.md
oicnp-api/src/: lib.rs  run.rs
oicnp-api/src/controllers/: mod.rs
oicnp-api/src/extensions/: auth.rs  mod.rs  resp.rs
oicnp-api/src/gql/: auth.rs  mod.rs  node.rs  node_query.rs  queries.rs  roots.rs  user.rs  user_query.rs
oicnp-api/src/middleware/: auth.rs  ctx.rs  mod.rs
oicnp-api/src/middlewares/: auth.rs  mod.rs
oicnp-api/src/models/: auth.rs  file.rs  mod.rs  nodes.rs  taxonomies.rs  users.rs
oicnp-api/src/services/: mod.rs  nodes.rs  taxonomies.rs  user.rs
oicnp-api/src/typings/: base.rs  date.rs  mod.rs  node.rs  query.rs  resp.rs  response.rs  state.rs
oicnp-api/src/utils/: log.rs  mod.rs  req.rs  (+4 more)
oicnp-cmd/: Cargo.toml  README.md
oicnp-cmd/src/: cli.rs  constants.rs  main.rs
oicnp-core/: Cargo.toml
oicnp-core/src/: config.rs  db.rs  lib.rs  prelude.rs
oicnp-derives/: Cargo.toml
oicnp-derives/src/: attributes.rs  column.rs  error.rs  lib.rs  utils.rs
oicnp-links/: Cargo.toml
oicnp-links/src/: main.rs
oicnp-links/templates/: warning-page.html
oicnp-yew/: .gitignore  Cargo.toml  Trunk.toml  package.json  tailwind.config.js
oicnp-yew/src/: lib.rs  routes.rs
oicnp-zino/: Cargo.toml
oicnp-zino/config/: config.dev.toml
oicnp-zino/src/: main.rs
oicnp_api/: Cargo.toml
oicnp_api/src/: lib.rs  run.rs
oicnp_yew/: .gitignore  Cargo.toml  index.html  package.json  tailwind.config.js
oicnp_yew/public/: style.css
oicnp_yew/src/: app.rs  lib.rs  routes.rs
(+1985 files in other folders)
