[workspace]
resolver = "2"
members = [
    "oicnp-api",
    "migration",
    "oicnp-derives",
    "oicnp-core",
    "oicnp-cmd",
    "oicnp-links",
    "frontend",
    # "oicnp-zino",
]
exclude = ["oicnp-backend", "oicnp-frontend", "oicnp-yew", "docs", "oicnp-zino"]
default-members = ["oicnp-api"]

[workspace.dependencies]
oicnp_core = { path = "oicnp-core" }
oicnp_derives = { path = "oicnp-derives" }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
async-graphql = {version = "^7", features = ["bson", "chrono"]}
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_yaml = "^0"
lazy_static = "^1"
tracing = "^0"
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "sync", "parking_lot", "signal"] }
chrono = { version = "^0", features = ["serde"] }
anyhow = "^1"
strum = "^0"
strum_macros = "^0"
log = "^0"
poem = "^2"
regex = "^1"
gray_matter = "^0"
rand = "^0"
scru128 = "^3"
bytes = "1"
async-trait = "^0.1"
thiserror = "^1"
once_cell = "1"
dotenv = "^0"

[workspace.dependencies.sea-orm]
version = "^0.12"
default-features = false
features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"]

[workspace.dependencies.sea-orm-migration]
version = "^0.12"
features = [
    "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
    "sqlx-postgres",         # `DATABASE_DRIVER` feature
]
