[package]
name = "oic"
version = "0.0.1"
authors = ["AQrun <aqrun@sina.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A fast content management system"
homepage = "https://www.oicnp.com"
repository = "https://github.com/aqrun/oicnp"
keywords = ["site", "cms"]

include = ["src/**/*", "LICENSE", "README.md"]

[[bin]]
path = "src/bin/main.rs"
name = "oic"

[dependencies]
oic_cmd = { workspace = true }
tokio = { workspace = true }

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
# oicnp_core = { path = "oicnp-core" }
# oicnp_derives = { path = "oicnp-derives" }
oic_cmd = { path = "crates/oic-cmd" }
clap = { version = "^4", features = ["derive"] }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
async-graphql = {version = "^7", features = ["bson", "chrono"]}
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_yaml = "^0"
lazy_static = "^1"
tracing = "^0"
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "sync", "parking_lot", "signal"] }
chrono = { version = "^0", features = ["serde"] }
anyhow = "^1"
strum = "^0"
strum_macros = "^0"
log = "^0"
regex = "^1"
gray_matter = "^0"
rand = "^0"
scru128 = "^3"
bytes = "1"
async-trait = "^0.1"
thiserror = "^1"
once_cell = "1"
dotenv = "^0"

[workspace.dependencies.sea-orm]
version = "^1"
default-features = false
features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"]

[workspace.dependencies.sea-orm-migration]
version = "^1"
features = [
    "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
    "sqlx-postgres",         # `DATABASE_DRIVER` feature
]
