[package]
name = "oic"
version = "0.0.1"
authors = ["AQrun <aqrun@sina.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A fast content management system"
homepage = "https://www.oicnp.com"
repository = "https://github.com/aqrun/oicnp"
keywords = ["site", "cms"]
include = ["src/**/*", "LICENSE", "README.md"]
# default-members = ["oic-cmd"]
default-run = "oic"

[dependencies]
# oic_cmd = { workspace = true }
oic_derives = { workspace = true }
oic_core = { workspace = true }
loco-rs = { workspace = true }
migration = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
include_dir = { workspace = true }
uuid = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
sea-orm = { workspace = true }
anyhow = { workspace = true }

# view engine i18n
fluent-templates = { workspace = true }
unic-langid = { workspace = true }
# /view engine

[dev-dependencies]
serial_test = { workspace = true }
rstest = { workspace = true }
loco-rs = { workspace = true, features = ["testing"] }
insta = { workspace = true }

[[bin]]
name = "oic"
path = "src/bin/main.rs"
required-features = []

[[bin]]
name = "tool"
path = "src/bin/tool.rs"
required-features = []

[workspace]
resolver = "2"
members = ["crates/*", "migration"]

[workspace.dependencies]
oic_core = { path = "crates/oic-core" }
oic_derives = { path = "crates/oic-derives" }
oic_cmd = { path = "crates/oic-cmd" }
oic_web = { path = "crates/oic-web" }
migration = { path = "migration" }
loco-rs = { version = "0.12", features = ["with-db"] }
clap = { version = "^4", features = ["derive"] }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
async-graphql = {version = "^7", features = ["bson", "chrono"]}
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_yaml = "^0"
lazy_static = "^1"
tracing = "^0"
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "sync", "parking_lot", "signal"] }
chrono = { version = "^0", features = ["serde"] }
anyhow = "^1"
strum = "^0"
strum_macros = "^0"
log = "^0"
regex = "^1"
gray_matter = "^0"
rand = "^0"
scru128 = "^3"
bytes = "1"
async-trait = "^0.1"
thiserror = "^1"
once_cell = "1"
dotenv = "^0"
axum = "0.7.5"
axum-extra = "0.9"
include_dir = "0.7"
uuid = { version = "1.6.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
# view engine i18n
fluent-templates = { version = "0.11.0", features = ["tera"] }
unic-langid = "0.9.4"
# /view engine
serial_test = "3.1.1"
rstest = "0.23.0"
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
validator = { version = "0.18" }
reqwest = { version = "0.12.9" }
mime = "0.3.16"
tower-http = { version = "^0.6" }

[workspace.dependencies.sea-orm]
version = "^1"
default-features = false
features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"]

[workspace.dependencies.sea-orm-migration]
version = "^1"
features = [
    "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
    "sqlx-postgres",         # `DATABASE_DRIVER` feature
]
