[package]
name = "api"
version = "0.0.1"
authors = ["Aqrun <aqrun@sina.com>"]
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
poem = "1.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
async-graphql-poem = "2.10"
async-graphql = {version = "2.10", features = ["bson", "chrono"]}
serde = {version = "1.0", features = ["derive"]}
slab = "0.4.3"
diesel = { version = "1.4.4", features = ["postgres", "chrono", "uuid", "r2d2"] }
chrono = { version = "0.4.19", features = ["serde"] }

[[bin]]
name = "main"





