[package]
name = "frontend"
version = "0.0.1"
authors = ["Aqrun <aqrun@sina.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4" }
dioxus-router = { version = "0.4" }
dioxus-web = { version = "0.4", features = [
    "hydrate",
], optional = true }
dioxus-ssr = { version = "0.4", optional = true }
dioxus-fullstack = { version = "0.4", features = [
    "router",
] }
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Window",
    "Event",
    "AddEventListenerOptions",
] }
axum = { version = "0.6.12", optional = true }
wasm-logger = "0.2.0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1", features = ["full"], optional = true }
regex = "^1"
gray_matter = "^0"
lazy_static = "^1"
log = "0.4.17"
anyhow = "1.0.71"
once_cell = "1"
chrono = "^0.4"

[features]
default = []
# doc_test = [
#     "tokio",
#     "ssr",
#     "dioxus-web",
#     "dioxus-router/web",
#     # "dioxus-tui",
#     # "dioxus-desktop",
#     # "dioxus-liveview",
#     # "dioxus-native-core",
#     # "dioxus-native-core-macro",
#     # "shipyard",
#     # "gloo-storage",
#     # "pretty_assertions",
# ]
web = ["dioxus-web", "dioxus-router/web"]
ssr = [
    "dioxus-ssr",
    "dioxus-router/ssr",
    "tokio",
    "dioxus-fullstack/axum",
    "axum",
]
prebuild = ["ssr"]

