[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
oicnp_core = { path = "../oicnp-core" }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
oicnp_derives = { path = "../oicnp-derives" }
lazy_static = "^1"

