[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
oicnp_core = { path = "../oicnp-core" }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
oicnp_derives = { path = "../oicnp-derives" }
lazy_static = "^1"

[dependencies.sea-orm-migration]
version = "^0.12"
features = [
    "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
    "sqlx-postgres",         # `DATABASE_DRIVER` feature
]

