[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
oicnp_core = { workspace = true }
async-std = { workspace = true }
oicnp_derives = { workspace = true }
lazy_static = { workspace = true }
sea-orm-migration = { workspace = true }

