[package]
name = "oicnp_api"
version = "0.0.1"
authors = ["Aqrun <aqrun@sina.com>"]
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oicnp_core = { path = "../oicnp-core" }
oicnp_derives = { path = "../oicnp-derives" }
poem = "^1"
async-graphql-poem = "^4"
async-graphql = {version = "^4", features = ["bson", "chrono"]}
regex = "^1"
gray_matter = "^0"
rand = "^0"
scru128 = "^2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1"
bytes = "1"
async-trait = "^0.1"

[[bin]]
name = "main"





