[package]
name = "oicnp_api"
version = "0.0.1"
authors = ["Aqrun <aqrun@sina.com>"]
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oicnp_core = { workspace = true }
oicnp_derives = { workspace = true }
poem = { workspace = true }
async-graphql = { workspace = true }
regex = { workspace = true }
gray_matter = { workspace = true }
rand = { workspace = true }
scru128 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }

[[bin]]
name = "main"





