[package]
name = "oicnp_cmd"
version = "0.0.1"
authors = ["Aqrun <aqrun@sina.com>"]
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "oic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oicnp_core = { path = "../oicnp-core" }
oicnp_api = { path = "../oicnp-api" }
migration = { path = "../migration" }
serde = { version = "^1", features = ["derive"] }
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "sync", "parking_lot"] }
regex = "^1"
gray_matter = "^0"
rand = "^0"
scru128 = "^3"
clap = { version = "^4", features = ["derive"] }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
lazy_static = "^1"

