[package]
name = "oicnp_cmd"
version = "0.0.1"
authors = ["Aqrun <aqrun@sina.com>"]
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "oic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oicnp_core = { path = "../oicnp-core" }
oicnp_api = { path = "../oicnp-api" }
migration = { path = "../migration" }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "parking_lot"] }
regex = { workspace = true }
gray_matter = { workspace = true }
rand = { workspace = true }
scru128 = { workspace = true }
clap = { version = "^4", features = ["derive"] }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
lazy_static = { workspace = true }

