[package]
edition = "2021"
name = "oicnp_core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_yaml = "^0"
lazy_static = "^1"
tracing = "^0"
tokio = { version = "^1", features = ["sync", "parking_lot"] }
chrono = { version = "^0", features = ["serde"] }
anyhow = "^1"
strum = "^0"
strum_macros = "^0"
log = "^0"

[dependencies.sea-orm]
version = "^0"
default-features = false
features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"]