[package]
edition = "2021"
name = "oicnp_core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_yaml = "^0"
lazy_static = "^1"
tracing = "^0"
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "sync", "parking_lot", "signal"] }
chrono = { version = "^0", features = ["serde"] }
anyhow = "^1"
strum = "^0"
strum_macros = "^0"
log = "^0"
rs-snowflake = "^0"
dotenv = "^0"
slab = "^0"
bson2 = "^2"
rbson = "^2"
fast_log = { version = "^1", features = ["lz4", "zip", "gzip"]}
tracing-subscriber = "^0"
slug = "0.1"
regex = "1"
once_cell = "1"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json"]}
jsonwebtoken = "^8.2"
ring = "^0.16"
data-encoding = "^2.4"
rand = "^0.8"

[dependencies.sea-orm]
version = "^0.11"
default-features = false
features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"]

[dependencies.sea-orm-migration]
version = "^0.11"
features = [
    "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
    "sqlx-postgres",         # `DATABASE_DRIVER` feature
]