[package]
name = "oicnp_links"
version = "0.0.1"
authors = ["Aqrun <aqrun@sina.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oicnp_core = { path = "../oicnp-core" }
poem = "^1"
serde = { version = "1.0", features = ["derive"] }
askama = "^0.12.0"
