[package]
name = "oicnp_yew"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lipsum = "^0"
log = "^0"
rand = { version = "^0", features = ["small_rng"] }
serde = { version = "^1", features = ["derive"] }
gloo-timers = "^0"
wasm-logger = "^0"
instant = { version = "^0", features = ["wasm-bindgen"] }
once_cell = "^1"
yew = "^0.20.0"
yew-router = "^0"
wasm-bindgen = "^0"
reqwest = { version = "^0", features = ["json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "^0", features = ["js"] }

[dev-dependencies]
js-sys = "^0"
gloo-utils = "^0"

[dependencies.web-sys]
version = "^0"
features = [
	"HtmlInputElement",
]

[[bin]]
name = "front-main"
required-features = ["yew/csr"]