[package]
name = "oicnp-zino"
description = "An example for axum integration."
version = "0.0.1"
rust-version = "1.73"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.20"
tracing = "0.1.4"

[dependencies.serde]
version = "1.0.193"
features = ["derive"]

[dependencies.zino]
version = "0.16.2"
features = ["axum"]

[dependencies.zino-core]
version = "0.17.2"
features = [
    "crypto-sm",
    "orm-postgres",
    "validator-email",
    "validator-phone-number",
    # "view-tera",
]

[dependencies.zino-derive]
version = "0.14.2"

[dependencies.zino-model]
version = "0.14.2"
