[package]
name = "oicnp_api"
version = "0.0.1"
authors = ["Aqrun <aqrun@sina.com>"]
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
poem = "1.0"
dotenv = "0.15.0"
lazy_static = "1.4"
async-graphql-poem = "2.10"
async-graphql = {version = "2.10", features = ["bson", "chrono"]}
slab = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
bson2 = "2"
rbson = "2.0"
log = "0.4"
fast_log = { version = "1", features = ["lz4", "zip", "gzip"]}
rbatis = { version = "3", features = ["debug_mode"] }
chrono = { version = "0.4.19", features = ["serde"] }
tracing-subscriber = "0.3"
regex = "1"
gray_matter = "0.2"
strum = "0.23"
strum_macros = "0.23"

[[bin]]
name = "main"





