[package]
name = "oicnp_yew"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
lipsum = "0.8.2"
log = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
gloo-timers = "0.2"
wasm-logger = "0.2"
instant = { version = "0.1", features = ["wasm-bindgen"] }
once_cell = "1"
yew = "0.19.3"
yew-router = "0.16.0"

[[bin]]
name = "oicnp_yew"
# required-features = ["yew/csr"]