[package]
name = "oicnp_yew"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lipsum = "0.8.2"
log = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
gloo-timers = "0.2"
wasm-logger = "0.2"
instant = { version = "0.1", features = ["wasm-bindgen"] }
once_cell = "1"
yew = "0.19"
yew-router = "0.16"
wasm-bindgen = "=0.2.80"
reqwest = { version = "0.11.7", features = ["json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
js-sys = "0.3.37"
gloo-utils = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]

# [[bin]]
# name = "oicnp_yew"
# required-features = ["yew/csr"]