[package]
name = "oic_admin"
version = "0.0.1"
edition = "2021"
authors = ["Aqrun <aqrun@sina.com>"]

[dependencies]
oic_core = { workspace = true }
oic_cache = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
gray_matter = { workspace = true }
rand = { workspace = true }
scru128 = { workspace = true }
clap = { workspace = true }
async-std = { workspace = true }
lazy_static = { workspace = true }
dotenv = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["rustls-tls", "json", "gzip"] }
loco-rs = { workspace = true, features = ["testing", 'with-db'] }
axum = { workspace = true, features = ["json"] }
axum-extra = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }
askama = { workspace = true, features = ["urlencode"]}
bytes = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
pulldown-cmark ={ workspace = true }
urlencoding = "2.1"
bb8 = { workspace = true }
bb8-redis = { workspace = true }
uuid = { workspace = true }
cookie = "0.18"