[package]
name = "oic_cmd"
version = "0.0.1"
edition = "2021"
authors = ["Aqrun <aqrun@sina.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# oicnp_core = { workspace = true }
# oicnp_api = { workspace = true }
# migration = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "parking_lot"] }
regex = { workspace = true }
gray_matter = { workspace = true }
rand = { workspace = true }
scru128 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
async-std = { workspace = true, features = ["attributes", "tokio1"] }
lazy_static = { workspace = true }
dotenv = { workspace = true }

