[package]
name = "oic_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oic_derives = { workspace = true }
async-graphql = { workspace = true }
serde = { workspace = true, features = ["derive"] }
axum = { workspace = true }
axum-extra = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
log = { workspace = true }
rs-snowflake = "^0"
dotenv = { workspace = true }
slab = "^0"
bson2 = "^2"
rbson = "^2"
fast_log = { version = "^1", features = ["lz4", "zip", "gzip"]}
tracing-subscriber = "^0"
slug = "0.1"
regex = { workspace = true }
once_cell = { workspace = true }
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"]}
jsonwebtoken = "^9.1"
ring = "^0.17"
data-encoding = "^2.4"
rand = "^0.8"
thiserror = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
async-trait = { workspace = true }
loco-rs = { workspace = true, features = ["testing"] }
uuid = { workspace = true }
validator = { workspace = true, features = ["derive"] }
mime = { workspace = true }
tower = { workspace = true }
futures-util = { workspace = true }

