[package]
name = "oic_derives"
version = "0.1.0"
edition = "2021"

[lib]
name = "oic_derives"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "^2", features = [ "full" ] }
quote = "^1"
proc-macro2 = "^1"
# bae = "^0"
darling = "^0"
proc-macro-crate = "^3"
thiserror = { workspace = true }
# oic_core = { workspace = true }
heck = { version = "0.5", default-features = false }
sea-orm = { workspace = true }